2009-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/xscheme.el (xscheme-evaluation-commands):
	Put a :advertised-binding property rather than using
	advertised-xscheme-send-previous-expression.
	(advertised-xscheme-send-previous-expression): Declare obsolete.
	* emulation/crisp.el (crisp-mode-map): Use `undo' rather than
	`advertised-undo'.
	(crisp-mode): Add corresponding bindings to
	undo's :advertised-binding instead.
	* dired.el (dired-mode-map): Put a :advertised-binding property rather
	than using dired-advertised-find-file.
	(dired-advertised-find-file):
	* simple.el (advertised-undo):
	* wid-edit.el (advertised-widget-backward): Declare obsolete.
	(widget-keymap): Put a :advertised-binding property rather
	than using advertised-widget-backward.
	* bindings.el (ctl-x-map): Put a :advertised-binding property rather
	than using advertised-undo.
	* tutorial.el (tutorial--default-keys): Adjust accordingly.

2009-09-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (define-key-rebound-commands): Mark obsolete.
	* startup.el (precompute-menubar-bindings): Remove.
	(normal-top-level): Remove obsolete code that tried to precompute
	menubar bindings.
	* loadup.el (define-key-rebound-commands): Don't bother fiddling with
	define-key-rebound-commands and precompute-menubar-bindings.

2009-09-10  Glenn Morris  <rgm@gnu.org>

	* pcvs.el (cvs-mode-find-file): Use forward-line rather than goto-line.

	* emacs-lisp/bytecomp.el (byte-compile-function-environment): Doc fix.
	(byte-compile-file-form-autoload): Don't warn about unknown functions
	where the autoload statement comes after the use.
	(with-no-warnings): Give it a byte-hunk-handler like than of progn, so
	that any handlers inside the body (eg require) are in turn respected.

	* emacs-lisp/byte-opt.el (degrees-to-radians): Mark as free from side
	effects.

	* emacs-lisp/derived.el (define-derived-mode): Give the mode's map,
	and syntax and abbrev tables basic docs, if they don't have any.
